Euler Rotation F-Curve Handlers wrong behaviour on moving keyframes. #40529

Closed
opened 2014-06-06 23:13:38 +02:00 by Mario Mey · 10 comments

I think, after adding "Type of" to handles, this started happen. In 2.7 stable, this bug doesn't exist.

Open the file, in F-Curves, move one of the Euler keyframes in Y axis. Look what it does. The handlers moves as their Y value was multiplied. Now, move Location vertices or Quaternions vertices... they work OK.

This happen in Builder version. Mine, now, is 81afc12. I don't know when the bug started.

I repeat, this bug, in 2.7 stable, doesn't exist.

I think, after adding "Type of" to handles, this started happen. In 2.7 stable, this bug doesn't exist. Open the file, in F-Curves, move one of the Euler keyframes in Y axis. Look what it does. The handlers moves as their Y value was multiplied. Now, move Location vertices or Quaternions vertices... they work OK. This happen in Builder version. Mine, now, is 81afc12. I don't know when the bug started. I repeat, this bug, in 2.7 stable, doesn't exist.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarioSottile

Added subscriber: @MarioSottile
Author
[49-F-Curve-Keyframe-Handlers-multiplied.blend](https://archive.blender.org/developer/F92945/49-F-Curve-Keyframe-Handlers-multiplied.blend)
Sergey Sharybin was assigned by Campbell Barton 2014-06-07 07:54:03 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Sergey, seems to be caused by 7c8be33d14

Sergey, seems to be caused by 7c8be33d14
Author

I found another thing... maybe related to this.

Open the same file.
Select any F-Curve vertex.
Unselect its handlers.
Move the vertex trough X.

What it does? The handlers move trough X with te vertex to avoid multi-Y-values... but stay there when the vertex goes back. Also, if you right click to cancel the new location, the handlers stay in the new location.

I found another thing... maybe related to this. Open the same file. Select any F-Curve vertex. Unselect its handlers. Move the vertex trough X. What it does? The handlers move trough X with te vertex to avoid multi-Y-values... but stay there when the vertex goes back. Also, if you right click to cancel the new location, the handlers stay in the new location.
Author

The last bug is in stable version, too.

The last bug is in stable version, too.

This issue was referenced by 0b5cd4b809

This issue was referenced by 0b5cd4b8090aa63bd5517483d0c19309eee7b121

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0b5cd4b809.

Closed by commit 0b5cd4b809.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40529
No description provided.