Fix T40529: Euler Rotation F-Curve Handlers wrong behaviour on moving keyframes